@@ -3,6 +3,11 @@ dpf-ax changelog
 	by <hackfin@section5.ch>
 	Find details in the git or svn logs.
 
+Sun, 04 Nov 2012
+       by superelchi
+       * New model:
+         - eachdesk_tumbler (thx c.dent).
+
 Sat, 03 Nov 2012
        by superelchi
        * New model:
